--- a/dlrs/main/classes/RollupServiceTest.cls
+++ b/dlrs/main/classes/RollupServiceTest.cls
@@ -2623,54 +2623,58 @@ private with sharing class RollupServiceTest {
   @IsTest
   static void testBypassApi() {
     String rollupUniqueName = 'SampleRollup';
-    Boolean bypassResult;
 
-    Test.startTest();
-    System.assertEquals(
-      false,
+    Assert.isFalse(
       RollupService.isBypassed(rollupUniqueName),
       'The rollup should not be bypassed yet.'
     );
-    bypassResult = RollupService.bypass(rollupUniqueName);
-    System.assert(
-      bypassResult,
+
+    Assert.isTrue(
+      RollupService.bypass(rollupUniqueName),
       'Should have modified the bypassed rollups set.'
     );
-    System.assertEquals(
-      true,
+    Assert.isTrue(
       RollupService.isBypassed(rollupUniqueName),
       'The rollup should be bypassed.'
     );
-    bypassResult = RollupService.clearBypass(rollupUniqueName);
-    System.assert(
-      bypassResult,
+
+    Assert.isTrue(
+      RollupService.clearBypass(rollupUniqueName),
       'Should have modified the bypassed rollups set.'
     );
-    System.assertEquals(
-      false,
+    Assert.isFalse(
       RollupService.isBypassed(rollupUniqueName),
       'The rollup should not be bypassed anymore.'
     );
     RollupService.bypass(rollupUniqueName);
     RollupService.clearAllBypasses();
-    System.assertEquals(
-      false,
+    Assert.isFalse(
       RollupService.isBypassed(rollupUniqueName),
       'The rollup should not be bypassed anymore.'
     );
 
-    bypassResult = RollupService.bypass(null);
-    System.assertEquals(
-      false,
-      bypassResult,
+    Assert.isFalse(
+      RollupService.bypass(null),
       'Should return "false" for a null rollup name.'
     );
-    bypassResult = RollupService.clearBypass(null);
-    System.assertEquals(
-      false,
-      bypassResult,
+    Assert.isFalse(
+      RollupService.clearBypass(null),
       'Should return "false" for a null rollup name.'
     );
-    Test.stopTest();
+
+    RollupService.bypassAll();
+    Assert.isTrue(
+      RollupService.isBypassed(rollupUniqueName),
+      'Should return "true" for all rollup names.'
+    );
+    Assert.isTrue(
+      RollupService.isBypassed('new name'),
+      'Should return "true" for all rollup names.'
+    );
+    RollupService.clearAllBypasses();
+    Assert.isFalse(
+      RollupService.isBypassed(rollupUniqueName),
+      'Should return "false" for all rollup names.'
+    );
   }
 }
